--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     "jest": "24.7.1",
     "jest-fetch-mock": "2.1.2",
     "np": "5.2.1",
-    "ol": "^6.1.1",
+    "ol": "^6.3.1",
     "rimraf": "3.0.0",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "4.2.2"
   }
 }
